[package]
name = "blare-lift"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
iced-x86.workspace = true
blare-cfg = { path = "../blare-cfg" }
blare-ir = { path = "../blare-ir" }
blare-pe = { path = "../blare-pe" }
